# badgley.github.io

./: .gitignore  .sesskey  CNAME  LICENSE  README.md  my-blog.ipynb  pelicanconf.py  publishconf.py  pyproject.toml
_posts/: 2024-12-07-welcome-to-jekyll.markdown
_site/: index.html
_site/notes/: index.html
_site/writing/: index.html
badgley_blog/: .sesskey  _modidx.py  app.py  core.py
content/: welcome.md
content/pages/: index.md  writing.md
nbs/: .sesskey  00_core.ipynb  01_build.ipynb  01_build_and_launch.ipynb  index.ipynb  my-blog.ipynb  nbdev.yml  sidebar.yml
notes/: coding-with-solveit.md  post-one.md  post-two.md
output/: archives.html  authors.html  categories.html  index.html  my-first-post.html  tags.html
output/author/: badgley.html
output/category/: misc.html
output/notes/: index.html
output/pages/: landing.html
output/theme/css/: style.css  styles.css
output/writing/: index.html
theme/static/css/: style.css
theme/templates/: base.html  index.html  page.html
