[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "badgley-blog"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "grayson badgley", email = "graysonbadgley@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/badgley/badgley-blog"
Documentation = "https://badgley.github.io/badgley-blog/"

[project.entry-points.nbdev]
badgley_blog = "badgley_blog._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "badgley_blog.__version__"}

[tool.setuptools.packages.find]
include = ["badgley_blog"]

[tool.nbdev]
